2008-08-14  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix GSASL in imap4d.
	* auth/gsasl.c (_gsasl_readline): Prevent stucking in
	blocking streams.
	* imap4d/auth_gsasl.c: Remove deprecated functions and data types.
	* imap4d/auth_gss.c (auth_gssapi): Fix signature.
	* imap4d/copy.c (imap4d_copy0): Fix return value.
	* imap4d/imap4d.c (imap4d_cfg_param): Fix type of login-disabled.
	* include/mailutils/gsasl.h (struct mu_gsasl_module_data): New
	members: service, realm, hostname, anon_user.
	* libcfg/gsasl.c (mu_gsasl_param): New keywords: service,
	realm, hostname, anonymous-user.

2008-08-13  Sergey Poznyakoff  <gray@gnu.org.ua>

	* imap4d/util.c (imap4d_readline): Fix loop break condition.
	* imap4d/testsuite/lib/imap4d.exp: Send newline after a literal.

	Bugfixes.
	* imap4d/copy.c, imap4d/fetch.c, imap4d/store.c: Do not report
	error on non-existing message sets (RFC 3501, section 6.4.8).
	* imap4d/testsuite/imap4d/IDEF0955.exp: Reflect this behavior.
	* imap4d/testsuite/imap4d/fetch.exp: Header names in replies 
	to BODY[HEADER.FIELDS...] are no longer quoted.

2008-08-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	More bugfixes in imap4d.
	* imap4d/authenticate.c (_auth_try): Fix call to p->handler.
	* imap4d/fetch.c (fetch_send_section_part): New argument
	close_bracket. 
	Never print .PEEK, it confuses some clients (notably Thunderbird).
	I need to verify RFC, though.
	All callers updated.
	* imap4d/idle.c: Use imap4d_getline to get the reply, to avod modifying
	tok and command.
	* imap4d/imap4d.h (util_send_bytes, util_trim_nl): New prototypes.
	* imap4d/util.c (util_trim_nl): New function.
	(imap4d_getline): Use util_trim_nl.
	
	Bugfixes.
	* imap4d/fetch.c (fetch_send_section_part): Make sure the item tag
	always reflects peek status.  All callers updated.
	(fetch_io): Try to allocate as large a buffer as possible.
	Use util_send_bytes where fit.
	* imap4d/imap4d.h (imap4d_auth_handler_fp): Remove unused argument.